# Image-Processing

./: Bonus-Affichage-utilisateur.c  Bonus-Affichage-utilisateur.h  CMakeLists.txt  Partie3.c  Partie3.h  app.py  bmp24-partie2.c  bmp24-partie2.h  bmp8.c  bmp8.h  main.c
config.toml.streamlit/: config.toml
